--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <title>Firebase Demo</title>
     </head>
-    <body style="background-color: blue; color: white; text-align: center; padding: 200px;">
-        <h1>Firebase Hosting Despliege Automatico</h1>
+    <body style="background-color: red; color: white; text-align: center; padding: 200px;">
+        <h1>Firebase Hosting Despliege Automatico v2222</h1>
         <hr>
         <h4>Devops con github actions</h4>
         <h4>Hola</h4>
