--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <body style="background-color: red; color: white; text-align: center; padding: 200px;">
         <h1>Firebase Hosting Despliege Automatico v2222</h1>
         <hr>
-        <h4>Devops con github actions</h4>
+        <h4>Devops con github dd actions</h4>
         <h4>Hola</h4>
     </body>
 </html>
